Looping through the CSV - RPA.Tables Library

--- a/log.html
+++ b/log.html
@@ -1806,31 +1806,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,5565],[],[[5,0,0,[],[0,5461,42,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,47984],[],[[5,0,0,[],[1,13644,34337],[[0,6,0,0,0,0,0,0,[1,13646,21783],[[0,7,8,0,9,10,0,0,[1,13651,21777],[[29391,2,11],[29641,2,12],[30687,2,13],[30688,2,14],[32773,2,15],[32774,2,16],[32774,2,17]]]]],[0,18,0,0,0,0,0,0,[1,35437,2061],[[0,19,8,0,20,21,0,0,[1,35438,1754],[[35444,2,22]]],[0,23,8,0,24,25,0,0,[1,37196,248],[[37198,2,26],[37314,2,27],[37443,2,28]]],[0,29,8,0,30,0,0,0,[1,37445,52],[[37446,2,31]]]]],[0,32,0,0,0,0,0,0,[1,37500,10468],[[0,7,8,0,9,33,0,0,[1,37502,10465],[[39884,2,11],[39936,2,12],[41177,2,13],[41178,2,14],[43191,2,15],[43192,2,16],[43194,2,34]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Order robots from RobotSpareBin Industries Inc","*Task cannot be empty."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Open the intranet site and log in","*Open the intranet website","*Open Available Browser","*RPA.Browser.Selenium","*<p>Attempts to open a browser on the user's device from a set of supported browsers. Automatically downloads a corresponding webdriver if none is already installed.\x3c/p>","*${URL}","*Downloaded webdriver to: C:\\Users\\ACER\\AppData\\Local\\robocorp\\webdrivers\\.wdm\\drivers\\chromedriver\\win64\\119.0.6045.105\\chromedriver-win32/chromedriver.exe","*Webdriver version taken into use: ChromeDriver 119.0.6045.105 (38c72552c5e15ba9b3117c0967a0fd105072d7c6-refs/branch-heads/6045@{#1103})\n","*Targeted browser version: 119.0.6045","*Creating an instance of the Chrome WebDriver.","*Created Chrome browser with arguments: --disable-dev-shm-usage --disable-web-security --allow-running-insecure-content --no-sandbox","eNp9UD1PAzEM3fkVVpfClL0KkQoUsVRCohJzLrY4S7n4ZOd6/Hxy14oyMVj2e8/ffgz7WmkYKyEkGTousbIU23k3Bo98hpSj2eMGJW2Cr7HL1Jw268OTymyk3rV4wS8ylywRf4mDqlxlt9YshuG5VxmoUbjC15jtho5kFr9oB5/UofKZFOib0rSOhm1aay/CFtigSAUu8L4/vcH9zLUHZFtyET4oU+FpgGMsraU+3F2m/LPLSacb+JPtrpe79pLwA1Dda5I=","*Opening url '<a href=\"https://robotsparebinindustries.com/\">https://robotsparebinindustries.com/\x3c/a>'","*Log in","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*username, maria","*Typing text 'maria' into text field 'username'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*password, thoushallnotpass","*Typing password into text field 'password'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Submit Form","*<p>Submits a form identified by <code>locator\x3c/code>.\x3c/p>","*Submitting form 'None'.","*Download order csv","*${ROBOTURL}","*Opening url '<a href=\"https://robotsparebinindustries.com/orders.csv\">https://robotsparebinindustries.com/orders.csv\x3c/a>'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699518922362;
+window.output["baseMillis"] = 1699604567151;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5727;
+window.output["generated"] = 48276;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
