--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,5565],[],[[5,0,0,[],[0,5461,42,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,47984],[],[[5,0,0,[],[1,13644,34337],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Order robots from RobotSpareBin Industries Inc","*Task cannot be empty."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Open the intranet site and log in"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699518922362;
+window.output["baseMillis"] = 1699604567151;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5727;
+window.output["generated"] = 48276;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
