--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,435962],[],[[5,0,0,[],[0,9362,426593,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,14435],[],[[5,0,0,[],[1,14157,262],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Open the intranet site and log in","eNqly7ENwjAQBdDeU/wuogiCQEBKnwmY4OT7CEuOHZ0T5g8zcN1r3otfmmS8JeXd2FBj3M2oUwjXE+bMhWVDl3SqprReSt0+tA6aFD9D1pViSAXDBY2xFm3nEAZPvnny3ZNHT3548vP/fAAzVJa8"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*d:\\_PROJECTS\\Robocorp projects\\robot-framework-demo\\tasks.robot","eNqzSVTIKEpNs1VKy8xJtdLX13ex0o8PCPL3cnUOCdYPyk/KT84vKlA1Migoys9KTS4p1i8CipXophUl5qaW5xdl66ak5ubrlyQWZxfrgaWU7KhmlI1+oh0AWs84SA==","eNp1jksOwjAMRK8yJwgXqLrgJyqBqCgrdmni0kg0iezQ85O2CNiwe7beeFzE8syWWMChDUnQcRhwmbiJmmntPCpvn5LYkWQ0Co0eM6aeEKYoDtfTEUyGXEzQAo16u0fnHvTrimEiL31ICN03TXZpVtgNLdl/7uwghXmYzr/7FDZMOuWOW1VDs+ndSJ/Q4uSPvJ0XbtB3ElWsYvkCLbxXxQ==","*Create zipped file"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:07:07","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:07:16","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700829229002;
+window.output["baseMillis"] = 1700831948607;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 437138;
+window.output["generated"] = 14546;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
